--- a/app/views/regalos/_controles.html.erb
+++ b/app/views/regalos/_controles.html.erb
@@ -12,7 +12,7 @@
       <%= link_to "Notificar", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info btn-md btn-block visible-xs", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra de manera anónima",  id: "comprado" %>
     </span>
     <span>
-      <%= link_to "Liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-md", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles", id: "liberado" %>
+      <%= link_to "Liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success btn-md", data: {toggle: "tooltip", placement: "top"}, title: "Cancelará tu reserva y olverá a estar disponible en la lista de regalos", id: "liberado" %>
     </span>
     <% else %>
       <span>
