--- a/app/views/regalos/_regalo.html.erb
+++ b/app/views/regalos/_regalo.html.erb
@@ -1,16 +1,16 @@
-  <div class="item regalo-<%= regalo.id %> hovsw  col-xs-4 col-lg-4">
-    <div class="thumbnail">
-      <label class="badge alert-success posicion-regalo"><%= regalo.position %></label>
+  <div class="item regalo-<%= regalo.id %> hover col-xs-4 col-sm-4 col-md-4 col-lg-4">
+    <div class="thumbnail hovsw">
       <div class="pic">
-      <a href="" class="btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><span class="fa fa-search-plus" id="ver-modal"></span>
+      <a href="" class="btn-modal" data-selector="<%= "modal-regalo-#{regalo.id}" %>"><span class="fa fa-search-plus" id="ver-modal"><sm class="hidden-xs">tips del anfitrión</sm>
+        <sm class="visible-xs">ver info</sm></span>
       <%= image_tag(regalo.imagen.normal.url, class: "lazy group list-group-image") if regalo.imagen? %>
       </a>
       </div>
       <div class="caption">
-        <h4 class="group inner list-group-item-heading"><%= link_to regalo.titulo.to_s.humanize.titleize , [regalo.lista.fiesta, regalo.lista, regalo]%></h4>
-        <p class="group inner list-group-item-text">
-          <%# simple_format(regalo.descripcion) %>
-        </p>
+        <h4 class="group inner list-group-item-heading"><%= regalo.titulo.to_s.humanize.titleize %></h4>
+        <div class="group inner list-group-item-text descripcion-xs">
+          <%= simple_format(regalo.descripcion) %>
+        </div>
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <% if policy(regalo).edit? %>
@@ -47,53 +47,4 @@
     <div class="clearfix"></div>
   </div><!-- /item -->
 
-<!-- modal begins -->
-<%= content_tag :div, class: 'modal fade', id: "modal-regalo-#{regalo.id}",role: "dialog"  do %>
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title"><%= "#{regalo.titulo}" %></h4>
-        </div>
-        <div class="modal-body">
-              <p><%= simple_format(regalo.descripcion) %>
-              </p>
-              <% unless regalo.donde_lo_consigues.nil? %>
-              <p>Tip del anfitrión:
-              <i><%= simple_format(regalo.donde_lo_consigues) %></i></p>
-              
-              <% end %>
-              <p><%= link_to 'Link de referencia', regalo.url if regalo.url? %>
-              </p>
-              <hr>
-              <div class="text-center" id="ajaxloader">
-                 <sm> cargando imagen </sm>
-                 <img src="/assets/grey.gif"></img>
-              </div>  
-              <div class="imagen text-center">
-              <%= image_tag(regalo.imagen.normal.url, class: "lazy") if regalo.imagen? %></div>
-              </div>
-        <div class="modal-footer">
-        <% unless regalo.compromiso.nil? %>
-          <% case regalo.compromiso.value %>
-            <% when "disponible" %>
-              <%= link_to "Confirmar Reserva!", fiesta_lista_regalo_reservar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info text-center ", id: "reservado" %>
-            <% when "reservado" %>
-            <%= link_to "regalo reservado", "", class: "btn btn-default disabled"   %>
-            <% if current_user == regalo.compromiso.user || policy(regalo).edit? %>
-              <%= link_to "liberarlo", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-success", data: {toggle: "tooltip", placement: "top"}, title: "Volverá a la lista de regalos disponibles" , id: "liberado"%>
-              <%= link_to "lo he comprado", fiesta_lista_regalo_comprar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-info", data: {toggle: "tooltip", placement: "top"}, title: "Notifica al anfitrión de tu compra", id: "comprado" %>
-            <% end %>
-            <% when "comprado" %>
-              <%= link_to "regalo comprado", "", class: "btn btn-success disabled" %>
-              <% if policy(regalo).edit? %>
-              <%= link_to "liberar", fiesta_lista_regalo_liberar_path(regalo.lista.fiesta, regalo.lista, regalo), class: "btn btn-default", id: "liberado" %>
-              <% end %>
-            <% end %>
-            <% end %>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
- <% end %><!-- /.modal -->
-
-<!-- modal ends -->
+<%= render partial: 'regalos/modal', locals: {regalo: regalo} %>
