Añadir link en tiendas

--- a/app/views/tiendas/index.html.erb
+++ b/app/views/tiendas/index.html.erb
@@ -6,6 +6,9 @@
     <div>
       <%= link_to "añade una tienda", new_tienda_path, class: "btn btn-md btn-primary" %>
     </div>
+    <span class="pull-right">
+      <%= link_to "interesado en comprar en USA?", "//www.mirincon.co/2013/10/como-comprar-en-amazon-desde-afuera-de.html" %>
+     </span>
     <% end %>
     <div class="tiendas table-responsive">
       <table class="table table-striped">
