Cambio en las etiquetas de JS para el listado de regalos

--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -40,7 +40,7 @@
       </div>
   </div>
   <div class="tab-content">
-    <div class="tab-pane active" id="lista-disponibles" data-selector="regalos">
+    <div class="tab-pane active" id="lista-disponibles">
       <div class="well well-sm">
           <strong>Regalos Disponibles </strong>
       </div>
@@ -50,7 +50,7 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane" id="lista-reservados" data-selector="regalos-reservados">
+    <div class="tab-pane" id="lista-reservados">
        <div class="well well-sm">
           <strong>Regalos Reservados </strong>
       </div>
@@ -60,7 +60,7 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane" id="lista-comprados" data-selector="regalos-comprados">
+    <div class="tab-pane" id="lista-comprados">
       <div class="well well-sm">
           <strong>Regalos Comprados </strong>
       </div>
