--- a/app/views/listas/show.html.erb
+++ b/app/views/listas/show.html.erb
@@ -5,26 +5,26 @@
   <div class="row">
 
     <ul class="nav nav-tabs" id="myTab">
-      <li class="hidden-xs col-sm-4 col-md-4 col-lg-4 active"><%= link_to "#lista-disponibles", data: {toggle: "tab"} do %>
+      <li class="hidden-xs col-sm-4 col-md-4 col-lg-4 active"><%= link_to "#lista-disponibles" do %>
         <span class="fa fa-star-o"></span>
         <p>Disponibles</p>
         <% end %>
       </li>
-      <li class="visible-xs col-xs-4"><%= link_to "#lista-disponibles", class: "btn btn-info btn-md", data: {toggle: "tab"} do %><span class="fa fa-star-o"></span>
+      <li class="visible-xs col-xs-4"><%= link_to "#lista-disponibles", class: "btn btn-info btn-md" do %><span class="fa fa-star-o"></span>
         <p>Disponibles</p>
         <% end %></li>
-      <li class="hidden-xs col-sm-4 col-md-4 col-lg-4"><%= link_to "#lista-reservados", data: {toggle: "tab"} do %>
+      <li class="hidden-xs col-sm-4 col-md-4 col-lg-4"><%= link_to "#lista-reservados" do %>
         <span class="fa fa-star-half-full"></span>
         <p>Reservados</p>
         <% end %></li>
-      <li class="visible-xs col-xs-4"><%= link_to "#lista-reservados", class: "btn btn-warning btn-md", data: {toggle: "tab"} do %><span class="fa fa-star-half-full"></span>
+      <li class="visible-xs col-xs-4"><%= link_to "#lista-reservados", class: "btn btn-warning btn-md" do %><span class="fa fa-star-half-full"></span>
         <p>Reservados</p>
         <% end %></li>
-      <li class="hidden-xs col-sm-4 col-md-4 col-lg-4"><%= link_to "#lista-comprados", data: {toggle: "tab"}  do %>
+      <li class="hidden-xs col-sm-4 col-md-4 col-lg-4"><%= link_to "#lista-comprados"  do %>
         <span class="fa  fa-star"></span>
         <p>Comprados</p>
         <% end %></li>
-        <li class="visible-xs col-xs-4"><%= link_to "#lista-comprados", class: "btn btn-success btn-md",  data: {toggle: "tab"} do %>
+        <li class="visible-xs col-xs-4"><%= link_to "#lista-comprados", class: "btn btn-success btn-md" do %>
         <span class="fa  fa-star"></span>
         <p>Comprados</p>
         <% end %></li>
@@ -40,7 +40,7 @@
       </div>
   </div>
   <div class="tab-content">
-    <div class="tab-pane active" id="lista-disponibles">
+    <div class="tab-pane active" id="lista-disponibles" data-selector="regalos-disponibles">
       <div class="well well-sm">
           <strong>Regalos Disponibles </strong>
       </div>
@@ -50,7 +50,7 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane" id="lista-reservados">
+    <div class="tab-pane" id="lista-reservados" data-selector="regalos-reservados">
        <div class="well well-sm">
           <strong>Regalos Reservados </strong>
       </div>
@@ -60,7 +60,7 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane" id="lista-comprados">
+    <div class="tab-pane" id="lista-comprados" data-selector="regalos-comprados">
       <div class="well well-sm">
           <strong>Regalos Comprados </strong>
       </div>
@@ -126,27 +126,28 @@ ready = function() {
     });
   // Función tabla de navegacion
    $('#myTab a').on('click', function (e) {
-    e.preventDefault();
-    $(this).tab('show');
-    // Cargar Masonry para cada tab
-      var $containercomprados = $('#regalos-comprados');
-        $containercomprados.masonry({
-        itemSelector: '.item'
-      });
-      var $containerreservados = $('#regalos-reservados');
-        $containerreservados.masonry({
-        itemSelector: '.item'
-      });
+      e.preventDefault();
+      $(this).tab('show');
     });
-   
+     $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
+     // Cargar Masonry para cada tab
+        var data = $("#" + $(e.target).attr("href").substr(1)).attr('data-selector');
+        var $containertab = $("#" + data);
+          $containertab.masonry({
+          itemSelector: '.item'
+        });
+        $('.item img').lazyload({
+        effect: 'fadeIn'
+     });
+    });
    // Función para grabar la selección de la tabla de navegación
-    $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
-        var id = $(e.target).attr("href").substr(1);
-        window.location.hash = id;
-    });
-     // al cargar ir a la tabla seleccionada
-    var hash = window.location.hash;
-    $('#myTab a[href="' + hash + '"]').tab('show');
+    // $("ul.nav-tabs > li > a").on("shown.bs.tab", function (e) {
+    //     var id = $(e.target).attr("href").substr(1);
+    //     window.location.hash = id;
+    // });
+    //  // al cargar ir a la tabla seleccionada
+    // var hash = window.location.hash;
+    // $('#myTab a[href="' + hash + '"]').tab('show');
 
    // Función toggle vistas lista y grilla
     // $('#lista').click(function(event){event.preventDefault();
