--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,16 +16,11 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if current_user %>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Hola <%= current_user.name || current_user.email %><b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "Editar cuenta", edit_user_registration_path %></li>
-                  <li class="divider"></li>
-                  <li><%= link_to destroy_user_session_path, method: :delete do %>Salir <i class="fa fa-power-off" style="font-size:15px; color:#ccc;"></i>
+              <li>
+              <%= link_to (current_user.name || current_user.email), edit_user_registration_path %>
+              <li><%= link_to destroy_user_session_path, method: :delete do %>Salir <i class="fa fa-power-off" style="font-size:15px; color:#ccc;"></i>
                   <% end %>
-                  </li>
-                </ul>
-            </li>
+                </li>
             <% else %>
               <li><%= link_to "Ya eres miembro? Ingresa", ingresar_path %> </li>
             <% end %>
