--- a/app/views/convidado_mailer/nuevo_usuario_convidado.text.erb
+++ b/app/views/convidado_mailer/nuevo_usuario_convidado.text.erb
@@ -3,12 +3,14 @@ Has recibido una invitación de parte de <%= User.find(@convidado.anfitrion_id).
 
 Queremos invitarte a la celebración del <%= @convidado.fiesta.nombre.humanize.titleize %>.
 
-Ingresa a nuestra <%= link_to "aplicación", @url %> y entre todos haremos que la entrega de regalos sea más divertida.
+Ingresa a nuestra aplicación en el siguiente link:  <%= link_to "aplicación", @url %> y entre todos haremos que la entrega de regalos sea más divertida.
 
 Regístrate vía facebook o con tus datos personales, mira el detalle de los regalos y reserva el que más te guste.
 
 Espero que te facilite la vida esta nueva aplicación.
 
-Un abrazo,
+Un abrazo, 
 
 Gabo Sarmiento
+Creador 
+http://lalistaderegalos.co
