ajustes generales para trabajo local y personalizacion de textos

--- a/app/views/bienvenida/inicio.html.erb
+++ b/app/views/bienvenida/inicio.html.erb
@@ -2,8 +2,8 @@
   <div id="headerwrap" id="home" name="home">
   <header class="clearfix">
         <h1><span class="fa fa-gift"></span></h1>
-        <p> Bienvenido a la lista de regalos.</p>
-          <p>Crea listas de regalos para compartir con tus invitados.</p>
+        <p> Bienvenido a la lista de regalos</p>
+          <p>Crea listas de regalos más humanas para compartir con tus invitados</p>
         <%= link_to "Regístrate para crear!", registrarse_path, class: "btn btn-lg btn-info"%>
         <div class="spacer"></div>
         <i class="fa fa-angle-down"></i>
@@ -15,20 +15,20 @@
       <div class="row">
         <div class="col-lg-4 callout">
           <span class="fa fa-book"></span>
-          <h2>Lista de regalos sencilla</h2>
-          <p>Crea una lista de regalos, publica los regalos sin un precio o cantidad. Añade una foto o un link donde lo viste y listo.</p>
+          <h2>Reserva de regalos interactiva</h2>
+          <p>Aquí tu publicas los regalos y los invitados van reservando el que más les guste sin repetirlo o sin revelar su identidad manteniendo la sorpresa.</p>
         </div><!-- col-lg-4 --> 
 
         <div class="col-lg-4 callout">
           <span class="fa fa-glass"></span>
-          <h2>Invita a tus familiares o amigos</h2>
-          <p>Como anfitrión de la fiesta puedes invitar vía correo a todos tus seres queridos y ellos podrán reservar los regalos sin revelar su identidad manteniendo siempre la sorpresa.</p>
+          <h2>Invitaciones electrónicas</h2>
+          <p>Como anfitrión de la fiesta personaliza la invitación e invita vía correo a todos tus seres queridos. Ellos podrán confirmar su asistencia, ver la lista de invitados y acceder a los regalos de tu lista.</p>
         </div><!-- col-lg-4 -->
         
         <div class="col-lg-4 callout">
           <span class="fa fa-heart"></span>
-          <h2>Reserva los regalos</h2>
-          <p>Cada invitado podrá reservar los regalos que más les guste y la aplicación le ayudará a conseguirlo antes de la fecha de la fiesta.</p>
+          <h2>Detalles que enamoran</h2>
+          <p>Regalos hechos por tus invitados, comprados en tiendas a su gusto, con los colores, motivos o estilos que tu sugieras pero que invitan a cada invitado a revivir la magia de imaginar el detalle que más guste.</p>
         </div><!-- col-lg-4 --> 
       </div><!-- row -->
     </div><!-- greywrap -->
