--- a/app/views/convidado_mailer/nuevo_usuario_convidado.html.erb
+++ b/app/views/convidado_mailer/nuevo_usuario_convidado.html.erb
@@ -17,7 +17,7 @@
     <p>Un abrazo,</p>
     <p><strong>Gabo Sarmiento</strong></p>
     <p>Creador</p>
-    <p><%= link_to 'lalistaderegalos.co', "http://lalistaderegalos.co") %></p>
+    <p><%= link_to 'lalistaderegalos.co', "http://lalistaderegalos.co" %></p>
 
   </body>
 </html>
