--- a/app/views/tours/listas.html.erb
+++ b/app/views/tours/listas.html.erb
@@ -93,6 +93,16 @@
         </div>
         </div><!-- /col-lg-8 -->
       </div>
+      <% else %>
+      <div class="row">
+        <div class="col-lg-8-offset-2 centered">
+          <span class="help-block">Empieza por ser el anfitrión de la fiesta</span>
+          <%= link_to registrarse_path, class: "btn btn-lg btn-success" do %>
+          <small><i class="fa fa-plus"></i>
+          </small> Crear tu primera fiesta
+          <% end %>
+        </div><!-- /col-lg-8 -->
+      </div>
       <% end %>
       <div class="row">
         <span><%= link_to tour_fiestas_path, class: "btn btn-lg btn-primary pull-left" do %>
